force-app/main/default/objects/Dummy18__c/Dummy18__c.object-meta.xml
<CustomObject>
    <label>Dummy18</label>
    <nameField>
        <label>Dummy18 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dummy18</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>