force-app/main/default/objects/Dummy18__c/fields/FooBar030__c.field-meta.xml
<CustomField>
    <fullName>FooBar030__c</fullName>
    <label>FooBar030</label>
    <length>255</length>
    <type>Text</type>
</CustomField>