force-app/main/default/objects/Dummy18__c/fields/FooBar049__c.field-meta.xml
<CustomField>
    <fullName>FooBar049__c</fullName>
    <label>FooBar049</label>
    <length>255</length>
    <type>Text</type>
</CustomField>