force-app/main/default/objects/Dummy18__c/fields/FooBar101__c.field-meta.xml
<CustomField>
    <fullName>FooBar101__c</fullName>
    <label>FooBar101</label>
    <length>255</length>
    <type>Text</type>
</CustomField>